<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/background_style"
    android:orientation="vertical"
    tools:context="com.huskies.developer.activities.ExerciseEditorActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/my_text_color"
            android:textSize="20sp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/exercise_name"
            android:id="@+id/exercise_editor_exercise_name"
            android:textColor="@color/my_text_color"
            android:textColorHint="@color/my_text_color"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/my_text_color"
        android:text="@string/exercise_formula"
        android:textSize="20sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0"
            android:id="@+id/exercise_editor_t_coeff"
            android:inputType="number"
            android:textSize="20sp"
            android:textColor="@color/my_text_color" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:textSize="20sp"
            android:text="@string/exercise_formula_p1"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exercise_editor_q_coeff"
            tools:text="0"
            android:inputType="number"
            android:textSize="20sp"
            android:textColor="@color/my_text_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/my_text_color"
            android:textSize="20sp"
            android:text = "@string/exercise_formula_p2"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baloo"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/exercise_formula_description"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/baloo"
        android:text="@string/exercise_formula_description_weight"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/baloo"
        android:text="@string/exercise_formula_description_time"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/baloo"
        android:textSize="20sp"
        android:text="@string/exercise_formula_description_quantity"/>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="bottom">
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:src="@drawable/ok_button"
            android:scaleType="centerInside"
            android:id="@+id/exercise_editor_OK_button"
            android:contentDescription="@string/set"/>
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginStart="60dp"
            android:background="@null"
            android:src="@drawable/cancel_button"
            android:scaleType="centerInside"
            android:layout_toRightOf="@id/exercise_editor_OK_button"
            android:layout_toEndOf="@id/exercise_editor_OK_button"
            android:id="@+id/exercise_editor_cancel_button"
            android:contentDescription="@string/cancel"/>
    </RelativeLayout>
</LinearLayout>
